fixtures/sample-org/force-app/main/default/objects/Account/fields/Customer_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tier__c</fullName>
    <label>Customer Tier</label>
    <length>40</length>
    <type>Text</type>
</CustomField>