fixtures/sample-org/force-app/main/default/objects/Account/fields/Last_Contact_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Change__c</fullName>
    <label>Last Contact Change</label>
    <type>DateTime</type>
</CustomField>