fixtures/sample-org/force-app/main/default/objects/Account/validationRules/Tier_Required_For_Customers.validationRule-meta.xml
<ValidationRule>
    <fullName>Tier_Required_For_Customers</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Type, &quot;Customer - Direct&quot;),
    ISBLANK(Customer_Tier__c)
)</errorConditionFormula>
    <errorDisplayField>Customer_Tier__c</errorDisplayField>
    <errorMessage>Customers must have a tier.</errorMessage>
</ValidationRule>